force-app/main/default/objects/Opportunity/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NB</fullName>
                <label>New Business</label>
            </value>
            <value>
                <fullName>RN</fullName>
                <label>Renewal</label>
            </value>
            <value>
                <fullName>ED</fullName>
                <label>Endorsement</label>
            </value>
            <value>
                <fullName>MO</fullName>
                <label>MoU</label>
            </value>
            <value>
                <fullName>Facultative Outward</fullName>
            </value>
            <value>
                <fullName>Facultative Inward</fullName>
            </value>
            <value>
                <fullName>Declaration</fullName>
            </value>
            <value>
                <fullName>Certificate</fullName>
                <isActive>false</isActive>
                <label>Certificate</label>
            </value>
            <value>
                <fullName>Cover Note</fullName>
                <isActive>false</isActive>
                <label>Cover Note</label>
            </value>
            <value>
                <fullName>Master Policy</fullName>
                <isActive>false</isActive>
                <label>Master Policy</label>
            </value>
            <value>
                <fullName>Open Cover</fullName>
                <isActive>false</isActive>
                <label>Open Cover</label>
            </value>
            <value>
                <fullName>Open Policy</fullName>
                <isActive>false</isActive>
                <label>Open Policy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>