force-app/main/default/objects/Opportunity/fields/OSP_Take_Over__c.field-meta.xml
<CustomField>
    <fullName>OSP_Take_Over__c</fullName>
    <label>OSP Take Over</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>