force-app/main/default/objects/Opportunity/fields/Overriding_Commission__c.field-meta.xml
<CustomField>
    <fullName>Overriding_Commission__c</fullName>
    <description>Derived from Coverage</description>
    <label>Overriding Commission</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>