force-app/main/default/objects/Opportunity/fields/Owner_Asset__c.field-meta.xml
<CustomField>
    <fullName>Owner_Asset__c</fullName>
    <label>Owner Asset</label>
    <length>255</length>
    <type>Text</type>
</CustomField>