force-app/main/default/objects/Opportunity/fields/Owner_Branch__c.field-meta.xml
<CustomField>
    <fullName>Owner_Branch__c</fullName>
    <formula>Text(Owner.Branch__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Branch</label>
    <type>Text</type>
</CustomField>