force-app/main/default/objects/Opportunity/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <label>Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Potential Prospect</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Underwriting Approval</fullName>
            </value>
            <value>
                <fullName>Quote Approved</fullName>
            </value>
            <value>
                <fullName>Quote Rejected</fullName>
            </value>
            <value>
                <fullName>Approve On Hold Binding</fullName>
            </value>
            <value>
                <fullName>Contra Quote</fullName>
            </value>
            <value>
                <fullName>Binding</fullName>
            </value>
            <value>
                <fullName>Quote Cancel</fullName>
            </value>
            <value>
                <fullName>Close Lost</fullName>
            </value>
            <value>
                <fullName>Close Won</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>