force-app/main/default/objects/Opportunity/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CS</fullName>
                <label>Cash</label>
            </value>
            <value>
                <fullName>TR</fullName>
                <label>Bank Transfer</label>
            </value>
            <value>
                <fullName>CC</fullName>
                <label>Credit Card</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>