force-app/main/default/objects/Opportunity/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <label>Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FULL PAYMENT</fullName>
            </value>
            <value>
                <fullName>SHORT TERM PERIOD</fullName>
            </value>
            <value>
                <fullName>LONG TERM</fullName>
            </value>
            <value>
                <fullName>CIA</fullName>
                <label>Cash In Advance</label>
            </value>
            <value>
                <fullName>IST</fullName>
                <label>Installment</label>
            </value>
            <value>
                <fullName>MUL</fullName>
                <label>Multiple Note</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>