force-app/main/default/objects/Opportunity/fields/Pemilik_Asset__c.field-meta.xml
<CustomField>
    <fullName>Pemilik_Asset__c</fullName>
    <label>Pemilik Asset</label>
    <length>255</length>
    <type>Text</type>
</CustomField>