force-app/main/default/objects/Opportunity/fields/Period_Annual__c.field-meta.xml
<CustomField>
    <fullName>Period_Annual__c</fullName>
    <label>[NOT USED] Period Annual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>