force-app/main/default/objects/Opportunity/fields/Period_of_SKEP_FROM__c.field-meta.xml
<CustomField>
    <fullName>Period_of_SKEP_FROM__c</fullName>
    <label>Period of SKEP (FROM)</label>
    <type>Date</type>
</CustomField>