force-app/main/default/objects/Opportunity/fields/Period_Rate__c.field-meta.xml
<CustomField>
    <fullName>Period_Rate__c</fullName>
    <label>Period Rate</label>
    <precision>14</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>