force-app/main/default/objects/Opportunity/fields/Plafond_Awal_Fasilitas_Take_Over__c.field-meta.xml
<CustomField>
    <fullName>Plafond_Awal_Fasilitas_Take_Over__c</fullName>
    <label>Plafond Awal Fasilitas Take Over</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>