force-app/main/default/objects/Opportunity/fields/Policy_Closing_Type__c.field-meta.xml
<CustomField>
    <fullName>Policy_Closing_Type__c</fullName>
    <label>Policy Closing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Policy_Closing_Type</valueSetName>
    </valueSet>
</CustomField>