force-app/main/default/objects/Opportunity/fields/Policy_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Policy_Distribution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Distribution</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Opportunities (Policy Distribution)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>