force-app/main/default/objects/Opportunity/fields/Policy_Settlement_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Policy_Settlement_Delivery__c</fullName>
    <label>Policy Settlement &amp; Delivery</label>
    <type>DateTime</type>
</CustomField>