force-app/main/default/objects/Opportunity/fields/policy_status__c.field-meta.xml
<CustomField>
    <fullName>policy_status__c</fullName>
    <label>policy status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>