force-app/main/default/objects/Opportunity/fields/Policy_Wording_Name__c.field-meta.xml
<CustomField>
    <fullName>Policy_Wording_Name__c</fullName>
    <label>Policy Wording Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>