force-app/main/default/objects/Opportunity/fields/Pre_Approved__c.field-meta.xml
<CustomField>
    <fullName>Pre_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre Approved</label>
    <type>Checkbox</type>
</CustomField>