force-app/main/default/objects/Opportunity/fields/premium_calculation__c.field-meta.xml
<CustomField>
    <fullName>premium_calculation__c</fullName>
    <label>premium calculation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 Flat</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 Decrasing Sum Insured</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 Discount Rate</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 Pro rata</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 Percentage</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6 Long Period</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>