force-app/main/default/objects/Opportunity/fields/Premium_on_Ceded_portion__c.field-meta.xml
<CustomField>
    <fullName>Premium_on_Ceded_portion__c</fullName>
    <formula>Rate__c * Share_Offered_Amount__c</formula>
    <label>Premium on Ceded portion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>