force-app/main/default/objects/Opportunity/fields/Previous_Janji_Survey_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Previous_Janji_Survey_Schedule__c</fullName>
    <label>Previous Janji Survey Schedule</label>
    <type>DateTime</type>
</CustomField>