force-app/main/default/objects/Opportunity/fields/Product_Name_BRE__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_BRE__c</fullName>
    <label>Product Name BRE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>