force-app/main/default/objects/Opportunity/fields/Product_Offering__c.field-meta.xml
<CustomField>
    <fullName>Product_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Offering</label>
    <referenceTo>Product_Offering__c</referenceTo>
    <relationshipLabel>Loan Informations</relationshipLabel>
    <relationshipName>Loan_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>