force-app/main/default/objects/Opportunity/fields/Profesional_Term_Facultative_Clauses_W__c.field-meta.xml
<CustomField>
    <fullName>Profesional_Term_Facultative_Clauses_W__c</fullName>
    <label>Subjectivity Clauses</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>