force-app/main/default/objects/Opportunity/fields/Profesional_Term_Facultative_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Profesional_Term_Facultative_Coverage__c</fullName>
    <label>Profesional Term Facultative Coverage &amp;</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>