force-app/main/default/objects/Opportunity/fields/Profit_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Profit_Sharing__c</fullName>
    <label>Profit Sharing</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>