force-app/main/default/objects/Opportunity/fields/Provision_Fee__c.field-meta.xml
<CustomField>
    <fullName>Provision_Fee__c</fullName>
    <label>[Del] Provision Fee</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>