force-app/main/default/objects/Opportunity/fields/Rebate_Commission_Ceded_portion__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Commission_Ceded_portion__c</fullName>
    <formula>Commision__c * Premium_on_Ceded_portion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rebate/Commission Ceded portion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>