force-app/main/default/objects/Opportunity/fields/Ref_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Ref_Policy_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref Policy Number</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>