force-app/main/default/objects/Opportunity/fields/Reference_Document_tobedeleted__c.field-meta.xml
<CustomField>
    <fullName>Reference_Document_tobedeleted__c</fullName>
    <label>Reference Document_tobedeleted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>