force-app/main/default/objects/Opportunity/fields/renewal_notice_no__c.field-meta.xml
<CustomField>
    <fullName>renewal_notice_no__c</fullName>
    <label>renewal notice no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>