force-app/main/default/objects/Opportunity/fields/Requestor_Channel__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Channel__c</fullName>
    <label>Account Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Channel</valueSetName>
    </valueSet>
</CustomField>