force-app/main/default/objects/Opportunity/fields/Requestor_Pipeline_Status__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Pipeline_Status__c</fullName>
    <label>Account Pipeline Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Pipeline_Status</valueSetName>
    </valueSet>
</CustomField>