force-app/main/default/objects/Opportunity/fields/Requestor_Sub_Segment__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Sub_Segment__c</fullName>
    <label>Account Sub-Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Sub_Segment</valueSetName>
    </valueSet>
</CustomField>