force-app/main/default/objects/Opportunity/fields/Risk__c.field-meta.xml
<CustomField>
    <fullName>Risk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risk</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>