force-app/main/default/objects/Opportunity/fields/Risk_Check__c.field-meta.xml
<CustomField>
    <fullName>Risk_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risk Check</label>
    <type>Checkbox</type>
</CustomField>