force-app/main/default/objects/Opportunity/fields/Risk_Closing_Survey_Fee_BSP__c.field-meta.xml
<CustomField>
    <fullName>Risk_Closing_Survey_Fee_BSP__c</fullName>
    <description>Derived from Coverage</description>
    <label>Risk/Closing Survey Fee / BSP</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>