force-app/main/default/objects/Opportunity/fields/Risk_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Risk_Occupation__c</fullName>
    <label>Risk Occupation Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>