force-app/main/default/objects/Opportunity/fields/Self_Insured__c.field-meta.xml
<CustomField>
    <fullName>Self_Insured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self Insured</label>
    <type>Checkbox</type>
</CustomField>