force-app/main/default/objects/Opportunity/fields/Sertifikat_Number__c.field-meta.xml
<CustomField>
    <fullName>Sertifikat_Number__c</fullName>
    <label>Sertipikat Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>