force-app/main/default/objects/Opportunity/fields/Sertipikat_Type__c.field-meta.xml
<CustomField>
    <fullName>Sertipikat_Type__c</fullName>
    <label>Sertipikat Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SHM</fullName>
            </value>
            <value>
                <fullName>SHGB</fullName>
            </value>
            <value>
                <fullName>SHMRS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>