force-app/main/default/objects/Opportunity/fields/Share_Accepted_Approved__c.field-meta.xml
<CustomField>
    <fullName>Share_Accepted_Approved__c</fullName>
    <label>Share Accepted/Approved (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>