force-app/main/default/objects/Opportunity/fields/Share_Accepted_Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Share_Accepted_Approved_Amount__c</fullName>
    <formula>Total_Sum_Insured__c * (Share_Accepted_Approved__c/100)</formula>
    <label>Share Accepted/Approved Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>