force-app/main/default/objects/Opportunity/fields/Share_Binding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Share_Binding_Amount__c</fullName>
    <formula>Total_Sum_Insured__c * (Share_Binding__c/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Share Binding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>