force-app/main/default/objects/Opportunity/fields/Share_Offered_Amount__c.field-meta.xml
<CustomField>
    <fullName>Share_Offered_Amount__c</fullName>
    <formula>Total_Sum_Insured__c * (Share_Offered__c/100)</formula>
    <label>Share Offered Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>