force-app/main/default/objects/Opportunity/fields/ShortFall__c.field-meta.xml
<CustomField>
    <fullName>ShortFall__c</fullName>
    <label>ShortFall</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>