force-app/main/default/objects/Opportunity/fields/SKEP_Amount__c.field-meta.xml
<CustomField>
    <fullName>SKEP_Amount__c</fullName>
    <label>SKEP Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>