force-app/main/default/objects/Opportunity/fields/SKEP_Currency__c.field-meta.xml
<CustomField>
    <fullName>SKEP_Currency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SKEP Currency</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Opportunities (SKEP Currency)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>