force-app/main/default/objects/Opportunity/fields/SKEP_Date__c.field-meta.xml
<CustomField>
    <fullName>SKEP_Date__c</fullName>
    <label>SKEP Date</label>
    <type>Date</type>
</CustomField>