force-app/main/default/objects/Opportunity/fields/SKEP_No__c.field-meta.xml
<CustomField>
    <fullName>SKEP_No__c</fullName>
    <label>SKEP No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>