force-app/main/default/objects/Opportunity/fields/Slip_Id__c.field-meta.xml
<CustomField>
    <fullName>Slip_Id__c</fullName>
    <label>Slip Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>