force-app/main/default/objects/Opportunity/fields/SOA_ID__c.field-meta.xml
<CustomField>
    <fullName>SOA_ID__c</fullName>
    <label>SOA ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>