force-app/main/default/objects/Opportunity/fields/SOA_Source__c.field-meta.xml
<CustomField>
    <fullName>SOA_Source__c</fullName>
    <label>Source of Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>