force-app/main/default/objects/Opportunity/fields/SOA_Type__c.field-meta.xml
<CustomField>
    <fullName>SOA_Type__c</fullName>
    <label>SOA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SOA_Type</valueSetName>
    </valueSet>
</CustomField>