force-app/main/default/objects/Opportunity/fields/SPV_ApprovedDt__c.field-meta.xml
<CustomField>
    <fullName>SPV_ApprovedDt__c</fullName>
    <label>SPV Approved Date</label>
    <type>DateTime</type>
</CustomField>