force-app/main/default/objects/Opportunity/fields/SPV_Notes2__c.field-meta.xml
<CustomField>
    <fullName>SPV_Notes2__c</fullName>
    <label>SPV Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>