force-app/main/default/objects/Opportunity/fields/SPV_Notes__c.field-meta.xml
<CustomField>
    <fullName>SPV_Notes__c</fullName>
    <label>[Del] SPV Notes</label>
    <type>TextArea</type>
</CustomField>