force-app/main/default/objects/Opportunity/fields/SPV_Result__c.field-meta.xml
<CustomField>
    <fullName>SPV_Result__c</fullName>
    <label>SPV Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>