force-app/main/default/objects/Opportunity/fields/Start_Date_Periode__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Periode__c</fullName>
    <label>Start Date Periode</label>
    <type>Date</type>
</CustomField>