force-app/main/default/objects/Opportunity/fields/Sum_Insured__c.field-meta.xml
<CustomField>
    <fullName>Sum_Insured__c</fullName>
    <label>Sum Insured</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>