force-app/main/default/objects/Opportunity/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>Loan Informations</relationshipLabel>
    <relationshipName>Loan_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>