force-app/main/default/objects/Opportunity/fields/Survey_Underwriting_Check__c.field-meta.xml
<CustomField>
    <fullName>Survey_Underwriting_Check__c</fullName>
    <label>[Not Used] Survey Underwriting Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>