force-app/main/default/objects/Opportunity/fields/Take_Over_Angsuran_Ke__c.field-meta.xml
<CustomField>
    <fullName>Take_Over_Angsuran_Ke__c</fullName>
    <label>Take Over Angsuran Ke</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>