force-app/main/default/objects/Opportunity/fields/Tanggal_Akta_Perolehan__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_Akta_Perolehan__c</fullName>
    <label>Tanggal Akta Perolehan</label>
    <type>Date</type>
</CustomField>