force-app/main/default/objects/Opportunity/fields/Tax_PCT__c.field-meta.xml
<CustomField>
    <fullName>Tax_PCT__c</fullName>
    <label>Tax PCT</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>