force-app/main/default/objects/Opportunity/fields/The_Insured_Address__c.field-meta.xml
<CustomField>
    <fullName>The_Insured_Address__c</fullName>
    <label>The Insured Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>