force-app/main/default/objects/Opportunity/fields/The_Insured_ID__c.field-meta.xml
<CustomField>
    <fullName>The_Insured_ID__c</fullName>
    <label>The Insured ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>