force-app/main/default/objects/Opportunity/fields/The_Insured_Name__c.field-meta.xml
<CustomField>
    <fullName>The_Insured_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>The Insured Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (The Insured Name)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>