force-app/main/default/objects/Opportunity/fields/The_Insured_Status__c.field-meta.xml
<CustomField>
    <fullName>The_Insured_Status__c</fullName>
    <formula>TEXT(The_Insured_Name__r.FinServ__Status__c)</formula>
    <label>The Insured Status</label>
    <type>Text</type>
</CustomField>