force-app/main/default/objects/Opportunity/fields/Tipe_Penilaian__c.field-meta.xml
<CustomField>
    <fullName>Tipe_Penilaian__c</fullName>
    <defaultValue>&quot;KJPP&quot;</defaultValue>
    <label>Tipe Penilaian</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Approval</fullName>
            </value>
            <value>
                <fullName>NJOP</fullName>
            </value>
            <value>
                <fullName>KJPP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>