force-app/main/default/objects/Opportunity/fields/Tipe_Polis__c.field-meta.xml
<CustomField>
    <fullName>Tipe_Polis__c</fullName>
    <label>Tipe Polis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>