force-app/main/default/objects/Opportunity/fields/Total_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Total_Rebate__c</fullName>
    <description>Derived from Coverage</description>
    <label>Total Rebate</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>