force-app/main/default/objects/Opportunity/fields/Total_Sum_Insured__c.field-meta.xml
<CustomField>
    <fullName>Total_Sum_Insured__c</fullName>
    <label>Total Sum Insured</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>