force-app/main/default/objects/Opportunity/fields/Treaty_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Treaty_Type_Id__c</fullName>
    <label>Treaty Type Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>