force-app/main/default/objects/Opportunity/fields/Type_Of_Business__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Business__c</fullName>
    <label>Type Of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Co-Insurance</fullName>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Direct</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Leader</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Member</label>
            </value>
            <value>
                <fullName>Full Covering</fullName>
                <isActive>false</isActive>
                <label>Full Covering</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>