force-app/main/default/objects/Opportunity/fields/Used_New__c.field-meta.xml
<CustomField>
    <fullName>Used_New__c</fullName>
    <formula>IF( CONTAINS(Asset_Code__c , &quot;NEW&quot;) , &quot;N&quot;, IF(CONTAINS(Asset_Code__c , &quot;USED&quot;), &quot;U&quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Used New</label>
    <type>Text</type>
</CustomField>